--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "chart.js": "^4.5.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "mysql2": "^3.14.1",
     "react": "^19.0.0",
