--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=switchyard.proxy.rlwy.net
+DB_HOST=shinkansen.proxy.rlwy.net
 DB_USER=root
-DB_PASSWORD=SpeGdWEEAniIDWHxUuLVqnmYsodTgqew
+DB_PASSWORD=PuIeBxBGrsthFvEYMJVoKknkkhBFbHRi
 DB_NAME=railway
-DB_PORT=55784
+DB_PORT=11131
