--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "bibliotecapessoal2.0",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "vite"
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^1.10.0",
@@ -32,5 +32,18 @@
     "globals": "^16.0.0",
     "nodemon": "^3.1.10",
     "vite": "^6.3.1"
-  }
+  },
+  "description": "📚 BibliotecaPessoal 2.0<br>\r Repositório criado como parte da apresentação do Trabalho de Conclusão de Semestre da 2ª fase do curso Técnico em Desenvolvimento de Sistemas do SENAI - SC.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CAMILALISTON/bibliotecapessoal2.0.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/CAMILALISTON/bibliotecapessoal2.0/issues"
+  },
+  "homepage": "https://github.com/CAMILALISTON/bibliotecapessoal2.0#readme"
 }
